--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
+/* html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+/* article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -45,4 +45,47 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}  */
+
+body {
+	background-color: rgb(184, 182, 182);
+	text-align: center;
+}
+
+h1 {
+
+	color: lime;
+}
+
+h1 {
+
+	color: red;
+}
+ol,
+ul{
+	list-style: none;
+}
+
+div.sticky {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	background-color: rgb(19, 4, 150);
+	padding: 20px;
+	font-size: 16px;
+	display: inline-block;
+}
+img {
+   width: 50%;
+   height: 50%;
+   border : 5px solid springgreen;
+   margin-bottom:40px ;
+
+}
+footer{
+	text-align: center;
+	font-size: 20px;
+	background-color: rgb(19, 4, 150);
+	color: rgb(184, 182, 182);
+
 }
